Connect getNftDetails endpoint with database
