# harvest-flow/api/src/controllers/detailedNftContract.ts
@@ -1,30 +1,49 @@
 import {Get, Query, Route} from "tsoa";
 import {Controller} from "@tsoa/runtime";
 import {NftContractDetails} from "@harvest-flow/utils";
+import {getContract, requirePool} from "@harvest-flow/db/build";
 
-
+const chainId = process.env.CHAIN_ID;
 
 @Route('nft_details')
 export class DetailedNftContractController extends Controller {
     @Get()
-    public async get(@Query() contractAddress : string): Promise<NftContractDetails> {
-        return dummyResponse;
-    }
-}
+    public async get(@Query() contractAddress : string): Promise<NftContractDetails | null> {
+        const pool = requirePool();
 
-const dummyResponse: NftContractDetails = {
-    name: 'Dummy NFT',
-    symbol: 'DNFT',
-    chainId: 'eip155:42161',
-    address: '0x1234567890abcdef1234567890abcdef12345678',
-    supplyCap: 100,
-    mintedAmount: 10,
-    leaseStart: Date.parse('2024-01-01T00:00:00Z'),
-    leaseEnd: Date.parse('2024-07-10T00:00:00Z'),
-    minYield: 9,
-    accepted_token: '0x9876543210fedcba9876543210fedcba98765432',
-    price: '4000',
-    poolBalance: '100',
-    metadata: {},
-    activated: true
+        console.log('contractAddress', contractAddress);
+        console.log('chainId', chainId);
+
+        const contractAddressLc = contractAddress.toLowerCase();
+
+        const getContractDataResult = await getContract.run(
+            {  address: contractAddressLc, chain_id: chainId, },
+            pool
+        );
+
+        console.log('getCreditBalanceResult', getContractDataResult);
+
+        if(getContractDataResult.length !== 0) {
+            return {
+                name: getContractDataResult[0].name,
+                symbol: getContractDataResult[0].symbol,
+                chainId: getContractDataResult[0].chain_id,
+                address: getContractDataResult[0].address,
+                supplyCap: getContractDataResult[0].supply_cap,
+                mintedAmount: getContractDataResult[0].minted_amount,
+                leaseStart:  Date.parse(getContractDataResult[0].lease_start.toISOString()),
+                leaseEnd:  Date.parse(getContractDataResult[0].lease_end.toISOString()),
+                minYield: Number(getContractDataResult[0].min_yield),
+                accepted_token: getContractDataResult[0].accepted_token,
+                price: getContractDataResult[0].price,
+                poolBalance: '0', // TODO: get pool balance
+                metadata: getContractDataResult[0].metadata_base_url ? getContractDataResult[0].metadata_base_url : undefined,
+                activated: getContractDataResult[0].activated,
+            };
+        } else {
+            return null;
+        }
+
+
+    }
 }
